Kubernetes/kustomize/overlays/minikube/ingress.yml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: media-ingress
#   namespace: media 
# spec:
#   entryPoints:
#     - websecure
#     - web
#   routes:
#     - kind: Rule
#       match: Host(`bazarr.minikube.local`)
#       services:
#         - kind: Service
#           name: mediavpn
#           namespace: media
#           port: bazarr
#           scheme: https
#     - kind: Rule
#       match: Host(`sonarr.minikube.local`)
#       services:
#         - kind: Service
#           name: mediavpn
#           namespace: media
#           port: sonarr
#           scheme: https
#     - kind: Rule
#       match: Host(`jackett.minikube.local`)
#       services:
#         - kind: Service
#           name: mediavpn
#           namespace: media
#           port: jackett
#           scheme: https
#     - kind: Rule
#       match: Host(`lidarr.minikube.local`)
#       services:
#         - kind: Service
#           name: mediavpn
#           namespace: media
#           port: lidarr
#           scheme: https
#     - kind: Rule
#       match: Host(`qbit.minikube.local`)
#       services:
#         - kind: Service
#           name: mediavpn
#           namespace: media
#           port: qbit-web-ui
#           scheme: https
#     - kind: Rule
#       match: Host(`jellyfin.minikube.local`)
#       services:
#         - kind: Service
#           name: jellyfin
#           namespace: media
#           port: 7026

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: media
spec:
  rules:
    - host: bazarr.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  mediavpn
                port:
                  name: bazarr
    - host: sonarr.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  mediavpn
                port:
                  name: sonarr
    - host: jackett.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  mediavpn
                port:
                  name: jackett
    - host: lidarr.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  mediavpn
                port:
                  name: lidarr
    - host: qbit.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  mediavpn
                port:
                  name: qbit-web-ui
    - host: jellyfin.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  jellyfin
                port:
                  name: web-ui
